// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> render without error 1`] = `
.c0 {
  position: relative;
  margin: 50px 20px;
  -webkit-transition: -webkit-transform .2s;
  -webkit-transition: transform .2s;
  transition: transform .2s;
}

.c0 div {
  visibility: visible;
}

.c0:hover {
  cursor: pointer;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c0:hover div {
  visibility: visible;
  opacity: 1;
}

@media (hover:none) {
  .c0:hover {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }

  .c0:hover div {
    visibility: visible;
  }
}

@media (max-width:600px) {
  .c0 {
    margin: 25px auto;
  }
}

<div
  className="c0"
/>
`;

exports[`<Wrapper /> render without error 2`] = `
.c0 {
  position: relative;
  margin: 50px 20px;
  -webkit-transition: -webkit-transform .2s;
  -webkit-transition: transform .2s;
  transition: transform .2s;
}

.c0 div {
  visibility: hidden;
}

.c0:hover {
  cursor: pointer;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c0:hover div {
  visibility: visible;
  opacity: 0.4;
}

@media (hover:none) {
  .c0:hover {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }

  .c0:hover div {
    visibility: hidden;
  }
}

@media (max-width:600px) {
  .c0 {
    margin: 25px auto;
  }
}

<div
  className="c0"
/>
`;
